--- a/VManagePlatform/templates/vmInstance/add_instance.html
+++ b/VManagePlatform/templates/vmInstance/add_instance.html
@@ -325,7 +325,7 @@
       <alias name='usb0'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x01' function='0x2'/>
     </controller>
-    <input type='mouse' bus='ps2'/>
+    <input type='tablet' bus='usb'/>
     <graphics type='vnc' port='5900' autoport='yes' listen='0.0.0.0' keymap='en-us'>
       <listen type='address' address='0.0.0.0'/>
     </graphics>
